Fixed issue #22 Front page carousel image now stretches properly on very large screens.

--- a/sites/all/modules/micb/front_page/assets/css/front_page.css
+++ b/sites/all/modules/micb/front_page/assets/css/front_page.css
@@ -60,6 +60,19 @@ body.front .carousel-control {
   background:none;
   font-size: 150px;
 }
+
+/* Carousel image */
+body.front .views-field-field-carousel-image-image {
+  text-align: center;
+  vertical-align: middle;
+  overflow: hidden;
+}
+body.front .views-field-field-carousel-image-image img {
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
 /* Carousel image caption */
 body.front .views-field-field-carousel-image-caption {
   position: absolute;
